--- a/feature.html
+++ b/feature.html
@@ -3,11 +3,32 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Constra - Building Construction Website Template</title>
+        <title>It & Hardware</title>
+        <meta charset="utf-8">
+        <title>AAR Enterprises</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
+       <meta name="keywords" content="AAR Enterprises, construction company, civil engineering, building contractors, infrastructure development, real estate projects, residential construction, commercial construction, road construction, trusted builders, quality construction services, construction in India">
+<meta name="description" content="AAR Enterprises is a trusted construction company delivering high-quality building, infrastructure, and civil engineering projects with excellence and reliability.">
 
+  <!-- Favicon Start-->
+        <!-- Favicon for all browsers -->
+<link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
+
+<!-- PNG favicons -->
+<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+
+<!-- Apple devices -->
+<link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+
+<!-- Android/Chrome -->
+<link rel="icon" type="image/png" sizes="192x192" href="favicon_io/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="favicon_io/android-chrome-512x512.png">
+
+<!-- Web App Manifest -->
+<link rel="manifest" href="favicon_io/site.webmanifest">
+
+         <!-- Favicon End-->
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,13 +64,13 @@
 
 
         <!-- Topbar Start -->
-        <div class="container-fluid topbar d-none d-xl-block w-100">
+       <div class="container-fluid topbar d-none d-xl-block w-100">
             <div class="row gx-0 align-items-center" style="height: 45px;">
                 <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
-                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+01234567890</a>
-                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>Example@gmail.com</a>
+                        <a href="https://maps.app.goo.gl/1FT8EMyBuWbQUijTA" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
+                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+91 9810814521</a>
+                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>aarenterprises07@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-end">
@@ -67,11 +88,14 @@
 
 
         <!-- Navbar & Hero Start -->
-        <div class="container-fluid sticky-top px-0">
+       <div class="container-fluid sticky-top px-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-4">
-                <a href="index.html" class="navbar-brand p-0">
-                    <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                 <a href="index.html" class="navbar-brand p-0">
+                    <!-- <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1> -->
+                    <!-- <img src="./img/ARREL.png" alt="Logo" style="height:80px; width:auto;"> -->
+                     <img src="./img/AAR Enterprises Logonew.png" alt="Logo" 
+     style="height:80px; width:auto; border-radius:15%;">
+
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -79,19 +103,19 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto pt-2 pt-lg-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="about.html" class="nav-item nav-link active">About</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="project.html" class="nav-item nav-link">Projects</a>
-                        <div class="nav-item dropdown active">
-                            <a href="#" class="nav-link dropdown-toggle text-dark active" data-bs-toggle="dropdown">Pages</a>
+                        <!-- <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-lg-0">
-                                <a href="feature.html" class="dropdown-item active">Our Features</a>
+                                <a href="feature.html" class="dropdown-item">Our Features</a>
                                 <a href="blog.html" class="dropdown-item">Our Blog</a>
                                 <a href="team.html" class="dropdown-item">Our Team</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-3  pt-lg-0 ms-lg-2">
@@ -125,54 +149,95 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our Features</h4>
+                <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our It & Hardware Services</h4>
                 <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active text-secondary">Feature</li>
+                    <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
+                    <li class="breadcrumb-item active text-secondary">It & Hardware</li>
                 </ol>    
             </div>
         </div>
         <!-- Header End -->
 
         <!-- Features Start -->
-        <div class="container-fluid feature bg-light py-5">
-            <div class="container py-5">
-                <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <p class="text-uppercase text-secondary fs-5 mb-0">WHy US</p>
-                    <h2 class="display-4 text-capitalize mb-3">Why Choose Us</h2>
+       <div class="container-fluid feature bg-light py-5">
+    <div class="container py-5">
+        <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
+            <p class="text-uppercase text-secondary fs-5 mb-0">IT & Hardware</p>
+            <h2 class="display-4 text-capitalize mb-3">Our IT & Hardware Solutions</h2>
+            <p class="text-muted">We provide modern IT infrastructure, hardware supply, and maintenance solutions tailored to your needs.</p>
+        </div>
+
+        <div class="row g-4">
+            <!-- Card 1 -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+                <div class="feature-item text-center border rounded-4 shadow-sm p-5 h-100 bg-white">
+                    <div class="feature-img bg-primary d-inline-flex p-4 rounded-circle shadow">
+                        <i class="fas fa-server text-white fa-3x"></i>
+                    </div>
+                    <a href="#" class="h4 d-block my-4">Server Solutions</a>
+                    <p class="mb-0 text-muted">High-performance servers for enterprises with full setup, management, and support services.</p>
                 </div>
-                <div class="row g-4">
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="feature-item text-center border p-5">
-                            <div class="feature-img bg-secondary d-inline-flex p-4">
-                                <i class="fas fa-city text-primary fa-5x"></i>
-                            </div>
-                            <a href="#" class="h4 d-block my-4">Expert Engineer</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
-                        </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="feature-item text-center border rounded-4 shadow-sm p-5 h-100 bg-white">
+                    <div class="feature-img bg-success d-inline-flex p-4 rounded-circle shadow">
+                        <i class="fas fa-laptop-code text-white fa-3x"></i>
                     </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="feature-item text-center border p-5">
-                            <div class="feature-img bg-secondary d-inline-flex p-4">
-                                <i class="fas fa-funnel-dollar text-primary fa-5x"></i>
-                            </div>
-                            <a href="#" class="h4 d-block my-4">Free Estimates</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
-                        </div>
+                    <a href="#" class="h4 d-block my-4">IT Hardware Supply</a>
+                    <p class="mb-0 text-muted">Complete supply of laptops, desktops, networking devices, and accessories at best prices.</p>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+                <div class="feature-item text-center border rounded-4 shadow-sm p-5 h-100 bg-white">
+                    <div class="feature-img bg-warning d-inline-flex p-4 rounded-circle shadow">
+                        <i class="fas fa-network-wired text-white fa-3x"></i>
                     </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="feature-item text-center border p-5">
-                            <div class="feature-img bg-secondary d-inline-flex p-4">
-                                <i class="fas fa-tools text-primary fa-5x"></i>
-                            </div>
-                            <a href="#" class="h4 d-block my-4">Quality Materials</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
-                        </div>
+                    <a href="#" class="h4 d-block my-4">Networking Setup</a>
+                    <p class="mb-0 text-muted">End-to-end solutions for LAN, WAN, Wi-Fi, firewall, and secure network infrastructure.</p>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
+                <div class="feature-item text-center border rounded-4 shadow-sm p-5 h-100 bg-white">
+                    <div class="feature-img bg-danger d-inline-flex p-4 rounded-circle shadow">
+                        <i class="fas fa-tools text-white fa-3x"></i>
                     </div>
+                    <a href="#" class="h4 d-block my-4">Maintenance & Support</a>
+                    <p class="mb-0 text-muted">Regular maintenance, troubleshooting, and technical support for all IT systems.</p>
+                </div>
+            </div>
+
+            <!-- Card 5 -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="1s">
+                <div class="feature-item text-center border rounded-4 shadow-sm p-5 h-100 bg-white">
+                    <div class="feature-img bg-info d-inline-flex p-4 rounded-circle shadow">
+                        <i class="fas fa-cloud text-white fa-3x"></i>
+                    </div>
+                    <a href="#" class="h4 d-block my-4">Cloud Integration</a>
+                    <p class="mb-0 text-muted">Seamless cloud solutions for storage, backup, and enterprise-grade applications.</p>
+                </div>
+            </div>
+
+            <!-- Card 6 -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="1.2s">
+                <div class="feature-item text-center border rounded-4 shadow-sm p-5 h-100 bg-white">
+                    <div class="feature-img bg-dark d-inline-flex p-4 rounded-circle shadow">
+                        <i class="fas fa-shield-alt text-white fa-3x"></i>
+                    </div>
+                    <a href="#" class="h4 d-block my-4">Cybersecurity</a>
+                    <p class="mb-0 text-muted">Robust security solutions including antivirus, firewalls, and data protection services.</p>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
         <!-- Features End -->
 
         <!-- Footer Start -->
@@ -183,7 +248,7 @@
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
                                 <h4 class="text-white mb-4">Newsletter</h4>
-                                <p class="mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+                                <p class="mb-3">“AAR Enterprises – Constructing dreams with strength.”</p>
                                 <div class="position-relative mx-auto">
                                     <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
                                     <button type="button" class="btn btn-secondary position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
@@ -218,11 +283,11 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block  5th Floor Gagan Apartment,Patna(Bihar)</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i>aarenterprises07@gmail.com</a>
+                            <!-- <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a> -->
+                            <a href=""><i class="fas fa-phone me-2"></i>+91 9810814521</a>
+                            <!-- <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a> -->
                             <div class="footer-btn d-flex align-items-center">
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-facebook-f text-white"></i></a>
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-twitter text-white"></i></a>
@@ -242,13 +307,13 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>AAR Enterprises</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end text-body">
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom text-white" href="https://adivioinfotech.com">Adivio infotech</a>
                     </div>
                 </div>
             </div>
