--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ building trust, strength, and timeless structures for communities.
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">IT & Hardware</a>
                                 <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
-                                <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
+                                <a class="btn btn-secondary py-2 px-4" href="./feature.html">Read More</a>
                             </div>
                             <div class="service-tytle">
                                 <div class="d-flex align-items-center justify-content-start ps-4 w-100">
@@ -899,7 +899,7 @@ AAR Enterprises has been the industry’s standard in durable work ever since th
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block 4th Floor Gagan Apartment,Patna(Bihar)</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block 5th Floor Gagan Apartment,Patna(Bihar)</a>
                             <a href=""><i class="fas fa-envelope me-2"></i>aarenterprises07@gmail.com</a>
                             <!-- <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a> -->
                             <a href=""><i class="fas fa-phone me-2"></i>+91 9810814521</a>
