--- a/supply.html
+++ b/supply.html
@@ -3,10 +3,30 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Constra - Building Construction Website Template</title>
+        <title>AAR Enterprises</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
+       <meta name="keywords" content="AAR Enterprises, construction company, civil engineering, building contractors, infrastructure development, real estate projects, residential construction, commercial construction, road construction, trusted builders, quality construction services, construction in India">
+<meta name="description" content="AAR Enterprises is a trusted construction company delivering high-quality building, infrastructure, and civil engineering projects with excellence and reliability.">
+
+  <!-- Favicon Start-->
+        <!-- Favicon for all browsers -->
+<link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
+
+<!-- PNG favicons -->
+<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+
+<!-- Apple devices -->
+<link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+
+<!-- Android/Chrome -->
+<link rel="icon" type="image/png" sizes="192x192" href="favicon_io/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="favicon_io/android-chrome-512x512.png">
+
+<!-- Web App Manifest -->
+<link rel="manifest" href="favicon_io/site.webmanifest">
+
+         <!-- Favicon End-->
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -235,7 +255,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block  4th Floor Gagan Apartment,Patna(Bihar)</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block  5th Floor Gagan Apartment,Patna(Bihar)</a>
                             <a href=""><i class="fas fa-envelope me-2"></i>aarenterprises07@gmail.com</a>
                             <!-- <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a> -->
                             <a href=""><i class="fas fa-phone me-2"></i>+91 9810814521</a>
