--- a/index.html
+++ b/index.html
@@ -139,39 +139,39 @@
                     <div class="carousel-item active">
                         <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="First slide"/>
                         <div class="carousel-caption">
-                            <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1s" style="animation-delay: 1s;">Construction Business</p>
+                            <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1s" style="animation-delay: 1s;">Construction Business ,It & Hardware Solutions</p>
                             <h1 class="display-1 text-capitalize text-white mb-4 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.3s" style="animation-delay: 1.3s;">We build somethings new and consistent.</h1>
                             <p class="mb-5 fs-5 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.5s;">AAR Enterprises is simply trusted name of the building and construction industry. 
                             </p>
                             <div class="d-flex justify-content-center">
-                                <a class="btn btn-primary d-flex py-3 px-5 me-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="#">Apply Now</a>
-                                <a class="btn btn-secondary d-inline-block py-3 px-5 ms-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="#">Read More</a>
+                                <a class="btn btn-primary d-flex py-3 px-5 me-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="./contact.html">Contact Us</a>
+                                <a class="btn btn-secondary d-inline-block py-3 px-5 ms-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="./supply.html">Read More</a>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="Second slide"/>
                         <div class="carousel-caption">
-                            <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1s" style="animation-delay: 1s;">Construction Business</p>
+                            <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1s" style="animation-delay: 1s;">Construction Business ,It & Hardware Solutions</p>
                             <h1 class="display-1 text-capitalize text-white mb-4 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.3s" style="animation-delay: 1.3s;">We build somethings new and consistent.</h1>
                             <p class="mb-5 fs-5 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.5s;">AAR Enterprises has been the industry’s standard in quality projects ever since the early days, 
                             </p>
                             <div class="d-flex justify-content-center">
-                                <a class="btn btn-primary d-flex py-3 px-5 me-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="#">Apply Now</a>
-                                <a class="btn btn-secondary d-inline-block py-3 px-5 ms-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="#">Read More</a>
+                                <a class="btn btn-primary d-flex py-3 px-5 me-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="./contact.html">Contact Us</a>
+                                <a class="btn btn-secondary d-inline-block py-3 px-5 ms-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="./contact.html">Read More</a>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/carousel-3.jpg" class="img-fluid w-100" alt="Third slide"/>
                         <div class="carousel-caption">
-                            <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1s" style="animation-delay: 1s;">Construction Business</p>
+                            <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1s" style="animation-delay: 1s;">Construction Business ,It & Hardware Solutions</p>
                             <h1 class="display-1 text-capitalize text-white mb-4 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.3s" style="animation-delay: 1.3s;">We build somethings new and consistent.</h1>
                             <p class="mb-5 fs-5 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.5s;">delivering strong foundations and shaping modern infrastructure with excellence.
                             </p>
                             <div class="d-flex justify-content-center">
-                                <a class="btn btn-primary d-flex py-3 px-5 me-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="#">Apply Now</a>
-                                <a class="btn btn-secondary d-inline-block py-3 px-5 ms-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="#">Read More</a>
+                                <a class="btn btn-primary d-flex py-3 px-5 me-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="./contact.html">Contact Us</a>
+                                <a class="btn btn-secondary d-inline-block py-3 px-5 ms-2 flex-shrink-0 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s" style="animation-delay: 1.7s;" href="./contact.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -309,9 +309,9 @@ building trust, strength, and timeless structures for communities.
                                 <div class="bg-secondary btn-xl-square mx-auto" style="width: 120px; height: 120px;">
                                     <i class="fas fa-home text-primary fa-4x"></i>
                                 </div>
-                                <a href="#" class="d-block fs-4 my-4">General Construction</a>
+                                <a href="./construction.html" class="d-block fs-4 my-4">General Construction</a>
                                 <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
-                                <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
+                                <a class="btn btn-secondary py-2 px-4" href="./construction.html">Read More</a>
                             </div>
                             <div class="service-tytle">
                                 <div class="d-flex align-items-center ps-4 w-100">
@@ -378,7 +378,7 @@ building trust, strength, and timeless structures for communities.
                                 <div class="bg-secondary btn-xl-square mx-auto" style="width: 100px; height: 100px;">
                                     <i class="fas fa-file-invoice-dollar text-primary fa-4x"></i>
                                 </div>
-                                <a href="#" class="d-block fs-4 my-4">Supply Management</a>
+                                <a href="./supply.html" class="d-block fs-4 my-4">Supply Management</a>
                                 <p class="text-white mb-4">AAR Enterprises designs with passion and engineers with precision. Bold, lasting!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="./supply.html">Read More</a>
                             </div>
@@ -401,7 +401,7 @@ building trust, strength, and timeless structures for communities.
                                 <div class="bg-secondary btn-xl-square mx-auto" style="width: 100px; height: 100px;">
                                     <i class="fas fa-cogs text-primary fa-4x"></i>
                                 </div>
-                                <a href="#" class="d-block fs-4 my-4">IT & Hardware</a>
+                                <a href="./feature.html" class="d-block fs-4 my-4">IT & Hardware</a>
                                 <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="./feature.html">Read More</a>
                             </div>
